Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28566

Assertion `!expr->is_fixed()' failed in bool Virtual_column_info::fix_session_expr(THD*)

    XMLWordPrintable

Details

    Description

      CREATE TABLE t (c1 CHAR AS (CONCAT (0,DAYNAME (0))));
      FLUSH TABLES WITH READ LOCK;
      UPDATE t SET c1=1;
      SELECT * FROM t;
      

      Leads to:

      10.4.25 16cebed54065ad9e18953aa86d48f6007d53c2d3 (Debug)

      mysqld: /test/10.4_dbg/sql/table.cc:3324: bool Virtual_column_info::fix_session_expr(THD*): Assertion `!expr->is_fixed()' failed.
      

      10.4.25 16cebed54065ad9e18953aa86d48f6007d53c2d3 (Debug)

      Core was generated by `/test/GAL_MD140522-mariadb-10.4.25-linux-x86_64-dbg/bin/mysqld --no-defaults --'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x154d35bf4700 (LWP 2047289))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x0000557a14b46741 in my_write_core (sig=sig@entry=6) at /test/10.4_dbg/mysys/stacktrace.c:386
      #2  0x0000557a14335b95 in handle_fatal_signal (sig=6) at /test/10.4_dbg/sql/signal_handler.cc:356
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x0000154d506c0859 in __GI_abort () at abort.c:79
      #6  0x0000154d506c0729 in __assert_fail_base (fmt=0x154d50856588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x557a14ce404b "!expr->is_fixed()", file=0x557a14ce3fa4 "/test/10.4_dbg/sql/table.cc", line=3324, function=<optimized out>) at assert.c:92
      #7  0x0000154d506d1f36 in __GI___assert_fail (assertion=assertion@entry=0x557a14ce404b "!expr->is_fixed()", file=file@entry=0x557a14ce3fa4 "/test/10.4_dbg/sql/table.cc", line=line@entry=3324, function=function@entry=0x557a14ce4a90 "bool Virtual_column_info::fix_session_expr(THD*)") at assert.c:101
      #8  0x0000557a1419dae4 in Virtual_column_info::fix_session_expr (this=0x154cf0037f80, thd=thd@entry=0x154cf0000d90) at /test/10.4_dbg/sql/table.cc:3324
      #9  0x0000557a1419dda3 in TABLE::vcol_fix_expr (this=<optimized out>, thd=thd@entry=0x154cf0000d90) at /test/10.4_dbg/sql/table.cc:3408
      #10 0x0000557a14038808 in open_table (thd=thd@entry=0x154cf0000d90, table_list=table_list@entry=0x154cf0013700, ot_ctx=ot_ctx@entry=0x154d35bf16f0) at /test/10.4_dbg/sql/sql_base.cc:2232
      #11 0x0000557a1403ceee in open_and_process_table (ot_ctx=0x154d35bf16f0, has_prelocking_list=false, prelocking_strategy=0x154d35bf17f0, flags=0, counter=0x154d35bf178c, tables=0x154cf0013700, thd=0x154cf0000d90) at /test/10.4_dbg/sql/sql_base.cc:3907
      #12 open_tables (thd=thd@entry=0x154cf0000d90, options=@0x154cf0006010: {m_options = DDL_options_st::OPT_NONE}, start=start@entry=0x154d35bf1778, counter=counter@entry=0x154d35bf178c, flags=flags@entry=0, prelocking_strategy=prelocking_strategy@entry=0x154d35bf17f0) at /test/10.4_dbg/sql/sql_base.cc:4388
      #13 0x0000557a1403e38d in open_and_lock_tables (thd=thd@entry=0x154cf0000d90, options=@0x154cf0006010: {m_options = DDL_options_st::OPT_NONE}, tables=<optimized out>, tables@entry=0x154cf0013700, derived=derived@entry=true, flags=flags@entry=0, prelocking_strategy=prelocking_strategy@entry=0x154d35bf17f0) at /test/10.4_dbg/sql/sql_base.cc:5335
      #14 0x0000557a140a79a2 in open_and_lock_tables (flags=0, derived=true, tables=0x154cf0013700, thd=0x154cf0000d90) at /test/10.4_dbg/sql/sql_base.h:503
      #15 execute_sqlcom_select (thd=thd@entry=0x154cf0000d90, all_tables=0x154cf0013700) at /test/10.4_dbg/sql/sql_parse.cc:6386
      #16 0x0000557a140b227d in mysql_execute_command (thd=thd@entry=0x154cf0000d90) at /test/10.4_dbg/sql/sql_parse.cc:3979
      #17 0x0000557a140bc677 in mysql_parse (thd=thd@entry=0x154cf0000d90, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x154d35bf3520, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.4_dbg/sql/sql_parse.cc:8011
      #18 0x0000557a140bf250 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x154cf0000d90, packet=packet@entry=0x154cf001a1d1 "SELECT * FROM t", packet_length=packet_length@entry=15, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.4_dbg/sql/sql_class.h:1201
      #19 0x0000557a140c1d2c in do_command (thd=0x154cf0000d90) at /test/10.4_dbg/sql/sql_parse.cc:1378
      #20 0x0000557a141e409c in do_handle_one_connection (connect=<optimized out>) at /test/10.4_dbg/sql/sql_connect.cc:1420
      #21 0x0000557a141e415c in handle_one_connection (arg=<optimized out>) at /test/10.4_dbg/sql/sql_connect.cc:1316
      #22 0x0000154d50bcf609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #23 0x0000154d507bd293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.4.25 (dbg), 10.5.16 (dbg), 10.6.8 (dbg), 10.7.4 (dbg), 10.8.3 (dbg), 10.9.0 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.3.35 (dbg), 10.3.35 (opt), 10.4.25 (opt), 10.5.16 (opt), 10.6.8 (opt), 10.7.4 (opt), 10.8.3 (opt), 10.9.0 (opt)

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              ramesh Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 7.5h
                  7.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.