MDEV-28566: Assertion `!expr->is_fixed()' failed in bool Virtual_column_info::fix_session_expr(THD*)

When we try to write to locked table, it fails but stored to table caches, then the cache is moved to free_tables. In the next time, when we try to read the table, the table is opened from free_tables. But in this case, `Virtual_column_info::fix_session_expr(THD*)` called even if expr->is_fixed() is true because `from_share` is false.

Therefore, I will add an additional expression to `TABLE::vcol_fix_expr(THD*)` in order to prevent to call unwanted `vcol->fix_session_expr(thd)`.